--- a/galeriaImagens-api/style.css
+++ b/galeriaImagens-api/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-header {
+.home-header {
     width: 100%;
     height: 90px;
 
@@ -49,5 +49,3 @@ main {
 #image-container img:hover {
     transform: scale(1.1);
 }
-
-
