--- a/solucao-prof/css/modal.css
+++ b/solucao-prof/css/modal.css
@@ -35,8 +35,6 @@
     font-size: 1rem;
 }
 
-
-
 .modal-close{
     position: absolute;
     right: 0;
@@ -56,13 +54,48 @@
 .modal-form{
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
     gap: 20px;
     padding: 0 20px;
 }
 
+.modal-image-container {
+    width: 300px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: relative;
+}
+
+#modal-image-input{
+    display: none;
+}
+
+#modal-image-label{
+    width: 100%;
+    height: 100%;
+
+    position: absolute;
+
+    cursor: pointer;
+}
+
+#modal-image{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.modal-field-container{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    flex-grow: 1;
+}
+
 .modal-field{
-    width: calc(50% - 10px);
+    width: 100%;
     height: 40px;
     outline-style: none;
     border-style: none;
