--- a/solucao-prof/css/records.css
+++ b/solucao-prof/css/records.css
@@ -15,6 +15,12 @@
     padding-left: 20px;
 }
 
+.records td img {
+    width: 80px;
+    height: 80px;
+    object-fit: contain;
+}
+
 .records th:last-child,
 .records td:last-child{
     padding: 0;
